[tool.poetry]
name = "laceworksdk"
version = "2.1.0"
description = "Community-developed Python SDK for the Lacework APIs"
authors = ["Jon Stewart <jon.stewart@lacework.net>"]
maintainers = ["Jon Stewart <jon.stewart@lacework.net>", "Matthew Cadorette <matthew.cadorette@lacework.net>"]
readme = "README.md"
packages = [{include = "laceworksdk"}]
license = "MIT"
homepage = "https://github.com/lacework/python-sdk"
repository = "https://github.com/lacework/python-sdk"
keywords = ["lacework", "api", "sdk", "python"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
python-dotenv = ">=0.20.0"
requests = ">=2.27.1"
configparser = ">=5.2.0"
bleach = ">=4.1.0"
urllib3 = ">=1.26.15"
importlib-metadata = ">=4.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7"
flake8 = "^5.0.4"
flake8-quotes = "^3.3"
pytest = "^7.2.2"
pytest-lazy-fixture = "^0.6.3"
pytest-rerunfailures = "^11.1.2"
mypy = "^1.1.1"
types-requests = "^2.28"
types-urllib3 = "^1.26"
pre-commit = "^2.21.0"
commitizen = "^2.42.1"
pdoc = "^12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
